# Phoenix-OLD

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  PhoenixMinecraftClone.srctrlprj  README.md  appveyor.yml  azure-pipelines.yml
Engine/: CMakeLists.txt
Engine/Assets/: Makefile
Engine/Include/: CMakeLists.txt
Engine/Include/Quartz2/: BlocksRegistry.hpp  BlocksTextureAtlas.hpp  CMakeLists.txt  Camera.hpp  Chunk.hpp  ChunkRenderer.hpp  ClientPlayer.hpp  Commander.hpp  ContentLoader.hpp  FileSystem.hpp  Filesystem.hpp  Game.hpp  ImGUITerminal.hpp  ImGuiHelpers.hpp  ImGuiHelpers.inl  LuaAPI.hpp  Math.hpp  MathUtils.hpp  Matrix4x4.hpp  Mesh.hpp  OpenGL32.hpp  Player.hpp  Quartz.hpp  Ray.hpp  Rect.hpp  Settings.hpp  ShaderCompiler.hpp  Singleton.hpp  Vec2.hpp  Vec3.hpp  Vertex.hpp  VoxelWorld.hpp
Engine/Include/Quartz2/Events/: Event.hpp  IEventListener.hpp  Keys.hpp
Engine/Include/Quartz2/Graphics/: CMakeLists.txt  Camera.hpp  ChunkMesher.hpp  ChunkRenderer.hpp  OpenGLTools.hpp  ShaderPipeline.hpp  Window.hpp
Engine/Include/Quartz2/Math/: CMakeLists.txt  Math.hpp  MathUtils.hpp  Matrix4x4.hpp  Ray.hpp  Rect.hpp  Vector2.hpp  Vector3.hpp
Engine/Include/Quartz2/Voxels/: Block.hpp  BlockRegistry.hpp  CMakeLists.txt  Chunk.hpp  ChunkManager.hpp  TextureRegistry.hpp
Engine/Source/: BlocksRegistry.cpp  BlocksTextureAtlas.cpp  CMakeLists.txt  Camera.cpp  Chunk.cpp  ChunkRenderer.cpp  Commander.cpp  ContentLoader.cpp  Game.cpp  ImGUITerminal.cpp  ImGuiHelpers.cpp  LuaAPI.cpp  Main.cpp  Matrix4x4.cpp  Mesh.cpp  OpenGL32.cpp  Ray.cpp  Settings.cpp  ShaderCompiler.cpp  VoxelWorld.cpp
Engine/Source/Graphics/: CMakeLists.txt  Camera.cpp  ChunkRenderer.cpp  ShaderPipeline.cpp  Window.cpp
Engine/Source/Math/: CMakeLists.txt  Matrix4x4.cpp  Ray.cpp
Engine/Source/Voxels/: BlockRegistry.cpp  CMakeLists.txt  Chunk.cpp  TextureRegistry.cpp
Engine/Tools/CMake/: FindFilesystem.cmake  FindFilesystem.txt
Phoenix/: CMakeLists.txt  imgui.ini  settings
Phoenix/Assets/: CMakeLists.txt  Crosshair.frag  Crosshair.vert  GUIShader.frag  GUIShader.vert  Licence.txt  SimpleLines.frag  SimpleLines.vert  SimpleWorld.frag  SimpleWorld.vert  Skybox.frag  Skybox.vert  Splashscreen.frag  TPXF licence.txt  Test.frag  Test.vert
Phoenix/Assets/Audio/: Licence.txt
Phoenix/Assets/Skybox/: licence.txt
Phoenix/Client/: CMakeLists.txt
Phoenix/Client/Include/Client/: Audio.hpp  AudioRegistry.hpp  CMakeLists.txt  Client.hpp  Crosshair.hpp  DebugOverlay.hpp  EscapeMenu.hpp  Game.hpp  GameTools.hpp  HUD.hpp  InputMap.hpp  InputQueue.hpp  InventoryUI.hpp  Network.hpp  Player.hpp  SplashScreen.hpp
Phoenix/Client/Source/: AudioRegistry.cpp  CMakeLists.txt  Client.cpp  Crosshair.cpp  DebugOverlay.cpp  EscapeMenu.cpp  Game.cpp  GameTools.cpp  HUD.cpp  ImGuiHelpers.cpp  InputMap.cpp  InputQueue.cpp  InventoryUI.cpp  Main.cpp  Network.cpp  Player.cpp  SplashScreen.cpp
Phoenix/Client/Source/Audio/: Audio.cpp  CMakeLists.txt  Listener.cpp  Source.cpp  SourcePool.cpp
Phoenix/Client/Source/Game/: CMakeLists.txt  GameStateManager.cpp  Timestep.cpp
Phoenix/Client/Source/Graphics/: CMakeLists.txt  Camera.cpp  ChatBox.cpp  ChunkMesher.cpp  ChunkRenderer.cpp  ChunkView.cpp  ImGuiExtensions.cpp  ImGuiHelpers.cpp  LayerStack.cpp  SelectionBoxRenderer.cpp  SelectionboxRenderer.cpp  ShaderPipeline.cpp  SkyboxRenderer.cpp  TexturePacker.cpp  UI.cpp  Window.cpp  WorldRenderer.cpp
Phoenix/Client/Source/Renderer/: CMakeLists.txt  InputState.cpp  Window.cpp
Phoenix/Client/Source/UI/: CMakeLists.txt  Crosshair.cpp  DebugOverlay.cpp  EscapeMenu.cpp  GameTools.cpp  HUD.cpp  InventoryUI.cpp  SplashScreen.cpp
Phoenix/Client/Source/Voxels/: AudioEventHandler.cpp  CMakeLists.txt
Phoenix/Common/: CMakeLists.txt
Phoenix/Common/Include/Common/: Actor.hpp  CLIParser.hpp  CMakeLists.txt  Commander.hpp  ContentLoader.hpp  CoreIntrinsics.hpp  EnumTools.hpp  FileIO.hpp  Input.hpp  InputState.hpp  Logger.hpp  Metadata.hpp  Movement.hpp  Player.hpp  (+6 more)
Phoenix/Common/Source/: Actor.cpp  CLIParser.cpp  CMakeLists.txt  Commander.cpp  ContentLoader.cpp  Input.cpp  InputMap.cpp  Logger.cpp  Metadata.cpp  Player.cpp  PlayerView.cpp  Save.cpp  Settings.cpp
Phoenix/Common/Test/: CMakeLists.txt
Phoenix/Include/Phoenix/: Actor.hpp  CMakeLists.txt  Client.hpp  Commander.hpp  ContentLoader.hpp  CoreIntrinsics.hpp  Crosshair.hpp  DebugOverlay.hpp  EnumTools.hpp  FileIO.hpp  Game.hpp  ImGuiHelpers.hpp  ImGuiHelpers.inl  Phoenix.hpp  Player.hpp  Settings.hpp  Singleton.hpp  SplashScreen.hpp  UI.hpp
Phoenix/Modules/: CMakeLists.txt
Phoenix/Modules/chests/: Init.lua
Phoenix/Modules/core/: Init.lua
Phoenix/Modules/mod1/: Init.lua
Phoenix/Modules/mod2/: Dependencies.txt  Init.lua
Phoenix/Modules/mod3/: Init.lua
Phoenix/Sandbox/: CMakeLists.txt
Phoenix/Sandbox/Source/: CMakeLists.txt  Main.cpp  Sandbox.cpp
Phoenix/Save/: CMakeLists.txt
Phoenix/Save/save1/: Mods.txt
Phoenix/Saves/: CMakeLists.txt
Phoenix/Saves/save1/: Mods.txt
Phoenix/Server/: CMakeLists.txt
Phoenix/Server/Source/: CMakeLists.txt  Commander.cpp  Game.cpp  Iris.cpp  Main.cpp  Server.cpp
Phoenix/Source/: Actor.cpp  CMakeLists.txt  Client.cpp  Commander.cpp  ContentLoader.cpp  Crosshair.cpp  DebugOverlay.cpp  Game.cpp  ImGuiHelpers.cpp  Main.cpp  Phoenix.cpp  Player.cpp  Settings.cpp  SplashScreen.cpp  UI.cpp
Phoenix/Source/GUI/: Button.cpp  CMakeLists.txt
Phoenix/Source/Graphics/: CMakeLists.txt  Camera.cpp  ChunkMesher.cpp  ChunkRenderer.cpp  LayerStack.cpp  ShaderPipeline.cpp  Window.cpp
Phoenix/Source/Math/: Matrix4x4.cpp  Ray.cpp
Phoenix/Source/Voxels/: BlockRegistry.cpp  CMakeLists.txt  Chunk.cpp  ChunkManager.cpp  Map.cpp  TextureRegistry.cpp
Sandbox/: CMakeLists.txt  Main.cpp  UI.cpp  UI.hpp
Sandbox/Assets/: CMakeLists.txt  SimpleWorld.frag  SimpleWorld.vert  TerrainShader.frag  TerrainShader.vert
Sandbox/Include/: CMakeLists.txt
Sandbox/Include/Sandbox/: CMakeLists.txt  Sandbox.hpp
Sandbox/Source/: CMakeLists.txt  Main.cpp  UI.cpp
(+198 files in other folders)
